<resources>
    <string name="app_name">Sawaari</string>

    <!--Logo texts-->

    <string name="app_moto">Travelling companion for you next trip</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register with us</string>
    <string name="next">Next</string>

    <!--Sign up-->

    <string name="full_name">Full Name</string>
    <string name="phone">Phone No.</string>
    <string name="re_password">Re-enter Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--More Texts-->

    <string name="switch_text">Drop off in another city</string>
    <string name="pickup">Pick up</string>
    <string name="dropoff">Drop off</string>

    <!--Tabs-->

    <string name="tab1">Goto Showroom</string>
    <string name="tab2">Delivered</string>
    <string name="tab3">Details</string>
    <string name="tab4">Documents</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
