<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="8dp">

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="8dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textSize="22sp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp" android:id="@+id/textView3"/>

                <EditText android:id="@+id/name"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/edit_text_selector"
                          android:padding="18dp"
                          android:hint="@string/full_name"
                          android:layout_marginTop="48dp"
                          app:layout_constraintTop_toBottomOf="@+id/textView3"
                          app:layout_constraintStart_toStartOf="@+id/textView3"
                          android:layout_marginLeft="8dp"
                          android:layout_marginStart="8dp"
                          app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

                <EditText android:id="@+id/email"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/edit_text_selector"
                          android:padding="18dp"
                          android:hint="@string/prompt_email" android:layout_marginTop="16dp"
                          app:layout_constraintTop_toBottomOf="@+id/name"
                          app:layout_constraintStart_toStartOf="@+id/name"
                          android:layout_marginLeft="8dp"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                          app:layout_constraintHorizontal_bias="0.0"/>

                <EditText android:id="@+id/phone"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/edit_text_selector"
                          android:padding="18dp"
                          android:hint="@string/phone" android:layout_marginTop="16dp"
                          app:layout_constraintTop_toBottomOf="@+id/email"
                          app:layout_constraintStart_toStartOf="@+id/email"
                          android:layout_marginLeft="8dp"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                          app:layout_constraintHorizontal_bias="0.0"/>

                <EditText android:id="@+id/password"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/edit_text_selector"
                          android:padding="18dp"
                          android:maxLines="1"
                          android:inputType="textPassword"
                          android:hint="@string/prompt_password" android:layout_marginTop="16dp"
                          app:layout_constraintTop_toBottomOf="@+id/phone"
                          app:layout_constraintStart_toStartOf="@+id/phone"
                          android:layout_marginLeft="8dp"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

                <EditText android:id="@+id/re_pass"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/edit_text_selector"
                          android:padding="18dp"
                          android:maxLines="1"
                          android:inputType="textPassword"
                          android:hint="@string/re_password" android:layout_marginTop="16dp"
                          app:layout_constraintTop_toBottomOf="@+id/password"
                          app:layout_constraintStart_toStartOf="@+id/password"
                          android:layout_marginLeft="8dp"
                          android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

                <Button
                        android:id="@+id/sign_up_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_selector"
                        android:text="@string/sign_up"
                        android:textColor="#fff"
                        android:textStyle="bold" android:layout_marginTop="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/re_pass"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                        android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginRight="24dp"
                        android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>