<?xml version="1.0" encoding="UTF-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/textviewbckgrnd"
        tools:context=".SignInActivity"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <ImageView
            android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"
            android:layout_marginStart="24dp" android:layout_marginLeft="24dp"
            app:layout_constraintStart_toStartOf="parent" android:src="@drawable/logo"/>

    <TextView
            android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:textColor="#fff" android:textSize="18sp"
            android:text="@string/app_moto"/>

    <ScrollView
            android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/login_form"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:padding="8dp" android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

        <android.support.constraint.ConstraintLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent">

            <EditText android:id="@+id/email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="32dp"
                      android:background="@drawable/edittext"
                      android:padding="18dp"
                      android:hint="@string/prompt_email"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

            <EditText
                    android:id="@+id/password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@drawable/edittext"
                    android:padding="18dp"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:hint="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeActionId="6"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>

            <Button
                    android:background="@drawable/button_selector" android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:id="@+id/email_sign_in_button"
                    android:layout_marginTop="16dp" android:layout_marginStart="24dp" android:layout_marginLeft="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password" android:textColor="#fff"
                    android:text="@string/action_sign_in_short" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="24dp" android:layout_marginEnd="24dp" android:textStyle="bold"
                    style="?android:textAppearanceSmall"/>

            <TextView
                    android:layout_height="wrap_content" android:layout_width="wrap_content"
                    android:id="@+id/textView2" android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="@+id/email_sign_in_button"
                    app:layout_constraintTop_toBottomOf="@+id/email_sign_in_button" android:textColor="#fff"
                    android:text="Don't have an account yet?"
                    app:layout_constraintEnd_toEndOf="@+id/email_sign_in_button"/>

            <TextView
                    android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/sign_up"
                    app:layout_constraintTop_toTopOf="@+id/textView2" android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp" android:textColor="@color/Blue" android:text="@string/sign_up"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>