<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent" android:layout_height="match_parent"
             tools:context=".Frags.Location_Selection.Tab1">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/pickup"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" android:id="@+id/textView6"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" android:id="@+id/editText"/>

            <Spinner android:id="@+id/spinner"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                     android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/editText"/>

            <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/spinner"
                    android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" android:id="@+id/switch1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_text"
                    android:textSize="15sp"
                    android:padding="5dp"
                    app:layout_constraintTop_toTopOf="@+id/switch1"
                    app:layout_constraintBottom_toBottomOf="@+id/switch1"
                    app:layout_constraintEnd_toStartOf="@+id/switch1" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:id="@+id/textView7"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/dropoff"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:id="@+id/textView8"
                    android:layout_marginTop="8dp"/>

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" android:id="@+id/editText2" android:layout_marginTop="8dp"/>

            <Spinner android:id="@+id/spinner2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
                     android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/editText2"/>

            <Button
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:text="@string/next"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/spinner2"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="24dp"
                    android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="24dp" android:layout_marginBottom="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>